<resources>
    <string name="app_name">MyChatApp</string>
    <string name="welcome_text">Welcome to Whatsup clone!</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need a New Account?</string>
    <string name="create_act">Create a New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_pic">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="display_name">Display Name</string>
</resources>
