<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBg">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView_settingsProfile_ID"
        android:layout_width="155dp"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_displayName_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView_settingsProfile_ID" />

    <TextView
        android:id="@+id/textView_status_ID"
        android:layout_width="312dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Hey... I Am Happy"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_displayName_ID" />

    <Button
        android:id="@+id/button_changeImage_ID"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:background="@drawable/bt_shape"
        android:textColor="#d3d3d3"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/change_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_status_ID" />

    <Button
        android:id="@+id/button_changeStatus_ID"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:textColor="#d3d3d3"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:background="@drawable/bt_shape"
        android:text="@string/change_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_changeImage_ID" />

</androidx.constraintlayout.widget.ConstraintLayout>